kubernetes/chhs-prototype/backend-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    name: chhs
    tier: backend
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: chhs
        tier: backend
    spec:
      containers:
      - image: portlandwebworks/chhs-backend:latest
        name: backend
        ports:
        - containerPort: 8080
