kubernetes/chhs-prototype/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-internal
  labels:
    name: chhs
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    name: chhs
    tier: frontend
